@@ -17,6 +17,7 @@ Changes in progress
 - Giny Enllaços educatius: added 'ePergam', 'La meva XTEC' and bug fix #111
 - Added constant SCHOOL_CODE 
 - Added shortcode to embed rss into post and page
+- Added author link in metadata author post
 
 
 Changes 15.03.20
